[gd_scene load_steps=11 format=3 uid="uid://dlv4j8jrt0k40"]

[ext_resource type="Texture2D" uid="uid://561iu8j3f0dw" path="res://structures/workshop/workshop_conveyors.png" id="1_3wddc"]
[ext_resource type="Script" path="res://structures/workshop/workshop.gd" id="1_fnga0"]
[ext_resource type="Texture2D" uid="uid://balhvxo83kce8" path="res://structures/workshop/workshop_wall.png" id="2_fova5"]
[ext_resource type="Texture2D" uid="uid://bkqwwo8ky2upr" path="res://structures/workshop/workshop_roof.png" id="3_g07wo"]
[ext_resource type="PackedScene" uid="uid://bpa5gxxm6qqhy" path="res://structures/in_out_node/input_node/input_node.tscn" id="5_qedq5"]
[ext_resource type="PackedScene" uid="uid://dfg4ssnong1hj" path="res://structures/in_out_node/output_node/output_node.tscn" id="6_p6oiq"]

[sub_resource type="Curve2D" id="Curve2D_edtng"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -16, -48, 0, 0, 0, 0, -16, -14)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_0vft0"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 16, -48, 0, 0, 0, 0, 16, -14)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_0fw4k"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 16, 4, 0, 0, 0, 0, 16, 52)
}
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_3wnae"]
radius = 1.0

[node name="Workshop" type="StaticBody2D"]
collision_layer = 2
script = ExtResource("1_fnga0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_3wddc")

[node name="Sprite2D2" type="Sprite2D" parent="."]
z_index = 2
texture = ExtResource("2_fova5")

[node name="Sprite2D3" type="Sprite2D" parent="."]
z_index = 2
texture = ExtResource("3_g07wo")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-32, 32, -32, -33, -1, -48, 3, -48, 32, -33, 32, 32, 24, 32, 24, 22, 19, 16, 13, 16, 8, 22, 8, 32)

[node name="Inputs" type="Node2D" parent="."]

[node name="InputNode1" parent="Inputs" instance=ExtResource("5_qedq5")]
position = Vector2(-16, -48)

[node name="InputNode2" parent="Inputs" instance=ExtResource("5_qedq5")]
position = Vector2(16, -48)

[node name="Outputs" type="Node2D" parent="."]

[node name="OutputNode" parent="Outputs" instance=ExtResource("6_p6oiq")]
position = Vector2(16, 48)

[node name="Paths" type="Node2D" parent="."]

[node name="Path2D1" type="Path2D" parent="Paths"]
curve = SubResource("Curve2D_edtng")

[node name="Path2D2" type="Path2D" parent="Paths"]
curve = SubResource("Curve2D_0vft0")

[node name="Path2D3" type="Path2D" parent="Paths"]
position = Vector2(0, -4)
curve = SubResource("Curve2D_0fw4k")

[node name="ProductionSensors" type="Node2D" parent="."]

[node name="Sensor1" type="Area2D" parent="ProductionSensors"]
position = Vector2(-16, -14)
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProductionSensors/Sensor1"]
shape = SubResource("CircleShape2D_3wnae")

[node name="Sensor2" type="Area2D" parent="ProductionSensors"]
position = Vector2(16, -14)
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProductionSensors/Sensor2"]
shape = SubResource("CircleShape2D_3wnae")

[node name="WaitingSensors" type="Node2D" parent="."]

[node name="Sensor1" type="Area2D" parent="WaitingSensors"]
position = Vector2(-16, -32)
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaitingSensors/Sensor1"]
shape = SubResource("CircleShape2D_3wnae")

[node name="Sensor2" type="Area2D" parent="WaitingSensors"]
position = Vector2(16, -32)
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaitingSensors/Sensor2"]
shape = SubResource("CircleShape2D_3wnae")

[node name="FullSensor" type="Area2D" parent="."]
position = Vector2(16, 0)
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FullSensor"]
shape = SubResource("CircleShape2D_3wnae")
